sast_reports/clang_tidy_report.txt
============================================
CLANG-TIDY ANALYSIS REPORT
============================================

Date: 12.01.2026 20:54:50,61
Tool: CLion bundled Clang-Tidy

============================================

 
=== Analyzing Main.cpp === 
 
C:\SAR\Main.cpp:1:10: error: 'iostream' file not found [clang-diagnostic-error]
    1 | #include <iostream>
      |          ^~~~~~~~~~
 
=== Analyzing test_engine.cpp === 
 
C:/SAR/cmake-build-debug/_deps/googletest-src/googletest/include\gtest/gtest.h:52:10: error: 'cstddef' file not found [clang-diagnostic-error]
   52 | #include <cstddef>
      |          ^~~~~~~~~
